<resources>
    <string name="app_name">RIMDB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="popular_people">Popular People</string>
    <string name="favorites">Favorites</string>
    <string name="offline">Offline</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="MOVIE_DB_API_KEY">2896d23164888eb4c0eb2eb1df1fee83</string>
    <string name="title_activity_main">RIMDB</string>


    <string name="favourite_movie">fav</string>
    <string name="not_favourite_movie">not_fav</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="large_text">

    </string>
    <string name="action_settings">Settings</string>

</resources>

